dist_man_MANS = \
	man3/semanage_bool.3 man3/semanage_bool_count.3 \
	man3/semanage_bool_count_active.3 man3/semanage_bool_count_local.3 \
	man3/semanage_bool_del_local.3 man3/semanage_bool_exists.3 \
	man3/semanage_bool_exists_active.3 man3/semanage_bool_exists_local.3 \
	man3/semanage_bool_iterate.3 man3/semanage_bool_iterate_active.3 \
	man3/semanage_bool_iterate_local.3 man3/semanage_bool_list.3 \
	man3/semanage_bool_list_active.3 man3/semanage_bool_list_local.3 \
	man3/semanage_bool_modify_local.3 man3/semanage_bool_query.3 \
	man3/semanage_bool_query_active.3 man3/semanage_bool_query_local.3 \
	man3/semanage_bool_set_active.3 man3/semanage_count.3 \
	man3/semanage_del.3 man3/semanage_exists.3 man3/semanage_fcontext.3 \
	man3/semanage_fcontext_count.3 man3/semanage_fcontext_count_local.3 \
	man3/semanage_fcontext_del_local.3 man3/semanage_fcontext_exists.3 \
	man3/semanage_fcontext_exists_local.3 man3/semanage_fcontext_iterate.3 \
	man3/semanage_fcontext_iterate_local.3 man3/semanage_fcontext_list.3 \
	man3/semanage_fcontext_list_local.3 man3/semanage_fcontext_modify_local.3 \
	man3/semanage_fcontext_query.3 man3/semanage_fcontext_query_local.3 \
	man3/semanage_iface.3 man3/semanage_iface_count.3 \
	man3/semanage_iface_count_local.3 man3/semanage_iface_del_local.3 \
	man3/semanage_iface_exists.3 man3/semanage_iface_exists_local.3 \
	man3/semanage_iface_iterate.3 man3/semanage_iface_iterate_local.3 \
	man3/semanage_iface_list.3 man3/semanage_iface_list_local.3 \
	man3/semanage_iface_modify_local.3 man3/semanage_iface_query.3 \
	man3/semanage_iface_query_local.3 man3/semanage_iterate.3 \
	man3/semanage_list.3 man3/semanage_modify.3 man3/semanage_node.3 \
	man3/semanage_node_count.3 man3/semanage_node_count_local.3 \
	man3/semanage_node_del_local.3 man3/semanage_node_exists.3 \
	man3/semanage_node_exists_local.3 man3/semanage_node_iterate.3 \
	man3/semanage_node_iterate_local.3 man3/semanage_node_list.3 \
	man3/semanage_node_list_local.3 man3/semanage_node_modify_local.3 \
	man3/semanage_node_query.3 man3/semanage_node_query_local.3 \
	man3/semanage_port.3 man3/semanage_port_count.3 \
	man3/semanage_port_count_local.3 man3/semanage_port_del_local.3 \
	man3/semanage_port_exists.3 man3/semanage_port_exists_local.3 \
	man3/semanage_port_iterate.3 man3/semanage_port_iterate_local.3 \
	man3/semanage_port_list.3 man3/semanage_port_list_local.3 \
	man3/semanage_port_modify_local.3 man3/semanage_port_query.3 \
	man3/semanage_port_query_local.3 man3/semanage_query.3 \
	man3/semanage_seuser.3 man3/semanage_seuser_count.3 \
	man3/semanage_seuser_count_local.3 man3/semanage_seuser_del_local.3 \
	man3/semanage_seuser_exists.3 man3/semanage_seuser_exists_local.3 \
	man3/semanage_seuser_iterate.3 man3/semanage_seuser_iterate_local.3 \
	man3/semanage_seuser_list.3 man3/semanage_seuser_list_local.3 \
	man3/semanage_seuser_modify_local.3 man3/semanage_seuser_query.3 \
	man3/semanage_seuser_query_local.3 man3/semanage_user.3 \
	man3/semanage_user_count.3 man3/semanage_user_count_local.3 \
	man3/semanage_user_del_local.3 man3/semanage_user_exists.3 \
	man3/semanage_user_exists_local.3 man3/semanage_user_iterate.3 \
	man3/semanage_user_iterate_local.3 man3/semanage_user_list.3 \
	man3/semanage_user_list_local.3 man3/semanage_user_modify_local.3 \
	man3/semanage_user_query.3 man3/semanage_user_query_local.3
