nobase_include_HEADERS	= \
	sepol/boolean_record.h  	sepol/node_record.h \
	sepol/policydb/flask_types.h 	sepol/policydb/sidtab.h \
	sepol/booleans.h        	sepol/nodes.h \
	sepol/policydb.h		sepol/policydb/symtab.h	\
	sepol/context.h 		sepol/policydb/avrule_block.h \
	sepol/policydb/hashtab.h	sepol/policydb/util.h \
	sepol/context_record.h  	sepol/policydb/avtab.h \
	sepol/policydb/hierarchy.h 	sepol/port_record.h \
	sepol/debug.h           	sepol/policydb/conditional.h \
	sepol/policydb/link.h		sepol/ports.h \
	sepol/errcodes.h 		sepol/policydb/constraint.h \
	sepol/policydb/mls_types.h	sepol/roles.h \
	sepol/handle.h			sepol/policydb/context.h \
	sepol/policydb/module.h 	sepol/sepol.h \
	sepol/iface_record.h		sepol/policydb/ebitmap.h \
	sepol/policydb/polcaps.h	sepol/user_record.h \
	sepol/interfaces.h 		sepol/policydb/expand.h	\
	sepol/policydb/policydb.h	sepol/users.h \
	sepol/module.h			sepol/policydb/flask.h \
	sepol/policydb/services.h

